rosa-files/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: nginx-ns
spec:
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 80
